# routes/routes.go
@@ -16,6 +16,7 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 	r.POST("/login", controllers.Login)
 	r.POST("/change-password", controllers.ChangePassword)
 
+	/*Phone Endpoints*/
 	r.GET("/phones", controllers.GetAllPhones)
 	r.GET("/phones/:phone_id", controllers.GetPhoneByID)
 	r.GET("/phones/:phone_id/reviews", controllers.GetReviewsForPhoneID)
@@ -24,6 +25,18 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 	phonesMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
 	phonesMiddlewareRoute.POST("/:phone_id/reviews", controllers.CreateReviewForPhone)
 	phonesMiddlewareRoute.POST("/", controllers.CreatePhone)
+
+	/*Review Endpoints*/
+	r.GET("/reviews", controllers.GetAllReviews)
+
+	reviewsMiddlewareRoute := r.Group("/reviews")
+	reviewsMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
+	reviewsMiddlewareRoute.PUT("/:review_id", controllers.EditReview)
+	reviewsMiddlewareRoute.DELETE("/:review_id", controllers.DeleteReview)
+	reviewsMiddlewareRoute.POST("/:review_id/comment", controllers.CreateReviewComment)
+	// reviewsMiddlewareRoute.GET("/:review_id/comment", controllers.GetReviewComments)
+	// reviewsMiddlewareRoute.POST("/:review_id/likes", controllers.CreateReviewLike)
+	// reviewsMiddlewareRoute.GET("/:review_id/likes", controllers.GetReviewLikes)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
